# Neurodynamics-and-Cognitive-Modeling

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/: 01_lif_simulation.py  02_hopfield_memory.py  03_attractor_analysis.py  04_decision_making.py  05_cognitive_twin.py
neurodynamics/: __init__.py
neurodynamics/agents/: __init__.py  brain_regions.py  cognitive_twin.py  message_bus.py
neurodynamics/api/: __init__.py  mcp_interface.py  rest.py
neurodynamics/cli/: main.py
neurodynamics/clinical/: __init__.py  disease_models.py
neurodynamics/cognitive/: __init__.py  architectures.py  attention.py  decision.py  predictive_coding.py  working_memory.py
neurodynamics/connectivity/: __init__.py  analysis.py  connectome.py  graph_builder.py  time_varying.py
neurodynamics/core/: __init__.py  base.py  config.py  events.py  registry.py
neurodynamics/data/: __init__.py  dataset_manager.py  loaders.py  synthetic.py
neurodynamics/dynamics/: __init__.py  attractors.py  bifurcation.py  chaos.py  information.py  phase_space.py  topology.py
neurodynamics/experiments/: __init__.py  builder.py  runner.py  tasks.py
neurodynamics/hypothesis/: __init__.py  discovery.py  ranking.py
neurodynamics/learning/: __init__.py  continual.py  hebbian.py  reinforcement.py
tests/: test_agents.py  test_api.py  test_clinical.py  test_cognitive.py  test_connectivity.py  test_dynamics.py  test_experiments.py  test_hypothesis.py  test_learning.py  test_neural_dynamics.py
(+12 files in other folders)
